[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/stage_select_background.png" type="Texture" id=1]
[ext_resource path="res://Textures/levelcomplete.png" type="Texture" id=2]
[ext_resource path="res://Scripts/levelComplete.gd" type="Script" id=3]
[ext_resource path="res://SoundFX/complete.tres" type="AudioStream" id=4]
[ext_resource path="res://Scenes/transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Font/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="StageSelectBackground" type="Sprite" parent="."]
position = Vector2( 160, 90 )
scale = Vector2( 2.48611, 2.48611 )
texture = ExtResource( 1 )

[node name="Levelcomplete" type="Sprite" parent="."]
position = Vector2( 163, 79 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 164, 89 )
stream = ExtResource( 4 )
autoplay = true

[node name="transition" parent="." instance=ExtResource( 5 )]

[node name="text" type="RichTextLabel" parent="."]
margin_left = 58.0
margin_top = 113.0
margin_right = 309.0
margin_bottom = 139.0
rect_scale = Vector2( 0.9, 0.9 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
__meta__ = {
"_editor_description_": ""
}

[connection signal="ready" from="." to="." method="_on_Node2D_ready"]
[connection signal="finished" from="music" to="." method="_on_music_finished"]
[connection signal="animation_finished" from="transition" to="." method="_on_transition_animation_finished"]
